<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Single"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@id/continuous"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/continuous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continuous"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/single" />

</androidx.constraintlayout.widget.ConstraintLayout>